# rust-cwrap

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: test.yml
src/: main.rs
src/lib/: cmdstate.rs  errors.rs  helpers.rs  manager.rs  mod.rs  smtp.rs  statefile.rs
src/wlib/: cmdstate.rs  errors.rs  helpers.rs  manager.rs  mod.rs  smtp.rs  statefile.rs
