[package]
name = "cwrap"
version = "0.1.0"
authors = ["Jay Deiman <jay@splitstreams.com>"]
description = """This is a binary that can be used to wrap something that is \
    run via crontab.  This will suppress failure (and success)output per \
    specifications on the command-line."""
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
log = "0.4.14"
chrono = "0.4.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syslog = "5.0"
hostname = "0.3.1"
md5 = "0.7"
random-number = "0.1"
signal-hook = "0.3"