[package]
name = "cwrap"
version = "0.3.0"
authors = ["Jay Deiman <jay@splitstreams.com>"]
description = """This is a binary that can be used to wrap something that is \
    run via crontab.  This will suppress failure (and success)output per \
    specifications on the command-line."""
edition = "2018"
repository = "https://github.com/crustymonkey/rust-cwrap"
license = "GPL-2.0-or-later"
homepage = "https://github.com/crustymonkey/rust-cwrap"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive", "cargo"] }
log = "0.4"
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
syslog = "7"
hostname = "0.4"
md5 = "0.7"
random-number = "0.1"
signal-hook = "0.3"
lettre = { version = "0.11", features = ["builder", "smtp-transport", "hostname", "rustls-tls"] }
anyhow = "1"
users = "0.11"
